<resources>
    <string name="contract_number">Sözleşme Numarası</string>
    <string name="reservation_number">Rezervasyon Numarası</string>
    <string name="contract_status">Durum</string>
    <string name="customer_name">Müşteri Adı</string>
    <string name="plate_number">Plaka</string>
    <string name="car_group">Araç Grubu</string>
    <string name="customer_phone_number">Müşteri Telefon Numarası</string>
    <string name="customer_email_address">Müşteri E-Posta Adresi</string>
    <string name="pickup_branch_name">Teslim Ofisi</string>
    <string name="dropoff_branch_name">İade Ofisi</string>
    <string name="driving_license_number">Ehliyet Numarası</string>
    <string name="driving_license_front_photo">Ehliyet/Kimlik  Ön Yüz Fotoğrafı</string>
    <string name="extra_driving_license_front_photo">2. Sürücü Ehliyet/Kimlik  Ön Yüz Fotoğrafı</string>
    <string name="extra2_driving_license_front_photo">3. Sürücü Ehliyet/Kimlik  Ön Yüz Fotoğrafı</string>
    <string name="driving_license_back_photo">Ehliyet/Kimlik Arka Yüz Fotoğrafı</string>
    <string name="extra_driving_license_back_photo">2. Sürücü Ehliyet/Kimlik  Arka Yüz Fotoğrafı</string>
    <string name="extra2_driving_license_back_photo">3. Sürücü Ehliyet/Kimlik  Arka Yüz Fotoğrafı</string>
    <string name="pickup_date_time">Teslim Tarihi - Saati</string>
    <string name="pickup_date">Teslim Tarihi</string>
    <string name="pickup_time">Teslim Saati</string>
    <string name="dropoff_date">İade Tarihi</string>
    <string name="dropoff_time">İade Saati</string>
    <string name="dropoff_date_time">İade Tarihi - Saati</string>
    <string name="customer_information_title">Sürücü Bilgileri</string>
    <string name="reservation_information_title">Hızlı Sözleşme Bilgileri</string>
    <string name="delivery_contract_title">Beklenen Teslimler</string>
    <string name="rental_contract_title">Beklenen İadeler</string>
    <string name="add_other_damage_title">Ek Hasar Ekle</string>
    <string name="license_front_photo_empty_error">Ehliyet ön yüz fotoğrafı çekilmelidir</string>
    <string name="extra_license_front_photo_empty_error">2. Sürücü Ehliyet ön yüz fotoğrafı
        çekilmelidir</string>
    <string name="extra2_license_front_photo_empty_error">3. Sürücü Ehliyet ön yüz fotoğrafı
        çekilmelidir</string>
    <string name="license_back_photo_empty_error">Ehliyet arka yüz fotoğrafı çekilmelidir</string>
    <string name="extra_license_back_photo_empty_error">2. Sürücü Ehliyet arka yüz fotoğrafı
        çekilmelidir</string>
    <string name="extra2_license_back_photo_empty_error">3. Sürücü Ehliyet arka yüz
        fotoğrafı çekilmelidir</string>
    <string name="delivery_fuel_value_error">Aracı teslim edebilmek için yakıt değeri 8 olmalıdır</string>
    <string name="fuel_value_error">Aracın güncel yakıt değerini girin</string>
    <string name="delivery_summary_title">Araç Teslim Özeti</string>
    <string name="transfer_delivery_summary_title">Transfer Teslim Özeti</string>
    <string name="transfer_return_summary_title">Transfer İade Özeti</string>
    <string name="damage_entry_title">Hasar Girişi</string>
    <string name="repaired_damage_entry_title">Onarılmış Hasarlar</string>
    <string name="equipment_list_title">Araç Seçimi</string>
    <string name="fine_price_title">Ek Ödemeler</string>
    <string name="rental_summary_title">Araç İade Özeti</string>
    <string name="contract_information">Sözleşme Bilgisi</string>
    <string name="vehicle_information">Araç Bilgisi</string>
    <string name="kilometer_text_title">Kilometre</string>
    <string name="fuel_gauge">Yakıt Göstergesi</string>
    <string name="total_additional_product_service_cost">Toplam Çekilecek/İade Tutar</string>
    <string name="total_extra_payment_amount_title">Toplam Çekilecek/İade Tutar</string>
    <string name="car_difference_amount_title">Geç/Erken İade Fark Tutarı</string>
    <string name="damages">Hasarlar</string>
    <string name="payment_info">Ödeme Kartı</string>
    <string name="deposit_info">Teminat Bilgisi</string>
    <string name="add_card">Kart Ekle</string>
    <string name="contract">Sözleşme</string>
    <string name="front_bumper_skirting_board">Ön Tampon \nSüpürgelik</string>
    <string name="vehicles_in_the_car_park">Otoparktaki Araçlar</string>
    <string name="in_use_vehicles">Kiradaki Araçlar</string>
    <string name="vehicles_in_the_washing">Yıkamadaki Araçlar</string>
    <string name="vehicle_in_the_service">Servisteki Araçlar</string>
    <string name="vehicle_in_the_transfer">Transferdeki Araçlar</string>
    <string name="all_fleet_search">Tüm Filoda Ara</string>
    <string name="all_equipment_title">Tüm Filo</string>
    <string name="total_car">Toplam Araç</string>
    <string name="vehicles_in_the_car_park_title">Otoparktaki Araçlar</string>
    <string name="set_kilometer_error">Aracın güncel kilometre değeri girilmelidir</string>
    <string name="kilometer_fuel_no_image_error">Kilometre ve yakıt fotoğrafı çekilmelidir</string>
    <string name="missing_license_error">Ruhsat olmadan araç teslim edilemez</string>
    <string name="missing_plate_error">Plaka olmadan araç teslim edilemez</string>
    <string name="inventories_must_be_checked_error">Araç üzerindeki bütün ekipmanların kontrolü yapılmadan teslim edilemez, "Mevcut" yada "Yok" seçeneklerinden birini seçin</string>
    <string name="no_selected_equipment_error">Plaka seçimi yapılmadan devam edilemez</string>
    <string name="welcome_title">Hoşgeldin</string>
    <string name="alert_ok_button">Tamam</string>
    <string name="alert_success_title">Başarılı</string>
    <string name="car_information_title">Araç Bilgileri</string>
    <string name="fuel_filling">Yakıt Dolumdaki Araçlar</string>
    <string name="class_id">Sınıf</string>
    <string name="brand_id">Marka</string>
    <string name="model">Model</string>
    <string name="color">Renk</string>
    <string name="where_is_my_car_status">Durum</string>
    <string name="added_additional_product_amount_title">Yeni Eklenen Ek Ürün Bedeli</string>
    <string name="added_additional_service_amount_title">Yeni Eklenen Ek Hizmet Bedeli</string>
    <string name="additional_products_title">Ek Ürünler</string>
    <string name="additional_service_title">Ek Hizmetler</string>
    <string name="new_transfer_title">Yeni Transfer Oluştur</string>
    <string name="create_title">Oluştur</string>
    <string name="will_transfer_title">Gidecek Transfer</string>
    <string name="future_transfer_title">Gelecek Transfer</string>
    <string name="nearest_exit">En yakın çıkış</string>
    <string name="nearest_return">En yakın dönüş</string>
    <string name="hint_plate_search">Plaka Ara</string>
    <string name="hint_contract_search">Sözleşme Ara</string>
    <string name="hint_reservation_search">Rezervasyon Ara</string>
    <string name="transfer_type">Transfer Tipi</string>
    <string name="transfer_start_date">Transfer Başlangıç Tarihi</string>
    <string name="transfer_location">Transfer Lokasyonu</string>
    <string name="return_branch">Dönüş Şubesi</string>
    <string name="add_extra_payment">Ek Ödeme Ekle</string>
    <string name="extra_payment_title">Ek Ödemeler</string>
    <string name="status">Durum</string>
    <string name="kilometer_small_error">*Girilen kilometre değeri aracın mevcut kilometresinden küçük olamaz</string>
    <string name="kilometer_empty_error">*Kilometre değeri boş bırakılamaz</string>
    <string name="input_empty_error">*Giriş değeri boş bırakılamaz</string>
    <string name="extra_payment_title_empty_error">*Ek ödeme tanımı boş bırakılamaz</string>
    <string name="extra_payment_amount_empty_error">*Ek ödeme tutarı boş bırakılamaz</string>
    <string name="extra_payment_amount_missing_error">*Geçerli bir değer girin</string>
    <string name="extra_payment_amount_zero_error">*Ek ödeme tutarı 0\'dan büyük olmalı</string>
    <string name="plate_number_empty_error">*Plaka numarası boş bırakılamaz</string>
    <string name="transfer_information_title">Transfer Bilgileri</string>
    <string name="planned_start_date_and_time">Planlanan Başlangıç Tarihi ve Saati</string>
    <string name="planned_end_date_and_time">Planlanan Bitiş Tarihi ve Saati</string>
    <string name="transfer_start_date_and_time">Transfer Başlangıç Tarihi ve Saati</string>
    <string name="transfer_end_date_and_time">Transfer Bitiş Tarihi ve Saati</string>
    <string name="transfer_outlet_branch">Transfer Çıkış Şubesi</string>
    <string name="transfer_return_branch">Transfer Dönüş Şubesi</string>
    <string name="transfer">Transfer</string>
    <string name="damage_to_be_repaired">Onarılacak Hasarlar</string>
    <string name="damage_zone_selection_title">Lütfen hasarlı bölgeyi seçiniz.</string>
    <string name="damage_type_zone_selection_title">Lütfen hasar tipi ve boyutunu seçiniz.</string>
    <string name="transfer_number">Transfer Numarası</string>
    <string name="customer">Müşteri</string>
    <string name="logout_dialog">Çıkış yapmak istediğinize emin misiniz ?</string>
    <string name="login_button_title">Giriş</string>
    <string name="dialog_button_yes">Evet</string>
    <string name="dialog_button_cancel">İptal</string>
    <string name="contract_update_confirmation_dialog_title">Sözleşme Güncelleme</string>
    <string name="transfer_create_confirmation_dialog_title">Transfer Oluşturma</string>
    <string name="dialog_success_title">Başarılı</string>
    <string name="dialog_button_ok">Tamam</string>
    <string name="delivery_contract_dialog_success_message">Teslimat işlemi başarılı</string>
    <string name="quick_contract_dialog_success_message">Sözleşmeniz başarıyla oluşmuştur.\'Beklenen Teslim\' menüsünden teslimat işlemini yapabilirsiniz.</string>
    <string name="create_transfer_dialog_success_message">Transfer belgesi başarıyla yaratılmıştır</string>
    <string name="transfer_success_message">Transfer belgesi başarıyla güncellendi</string>
    <string name="username_password_empty_error">Kullanıcı adı ve şifre boş olamaz</string>
    <string name="next_button_title">Devam Et</string>
    <string name="back_button_title">Geri</string>
    <string name="upgrade_text">Upgrade</string>
    <string name="downgrade_text">Downgrade</string>
    <string name="logout_text">Çıkış Yap</string>
    <string name="upgrade_upsell_message_text">Sözleşmedeki araç grubundan ÜST sınıf bir araç seçtiniz.</string>
    <string name="downgrade_downsell_message_text">Sözleşmedeki araç grubundan ALT sınıf bir araç seçtiniz.</string>
    <string name="add_damage_button_title">Hasar Ekle</string>
    <string name="transfer_type_title">Transfer Tipi</string>
    <string name="estimated_pickup_date_time_title"><![CDATA[Transfer Başlangıç Tarihi & Saati]]></string>
    <string name="free_transfer_title">Ücretsiz Bilet</string>
    <string name="fault_transfer_title">Servis-Arıza</string>
    <string name="second_hand_title">İkinci El</string>
    <string name="service_transfer_title">Servis-Bakım</string>
    <string name="branch_transfer_title">Şubeye Transfer</string>
    <string name="damage_transfer_title">Servis-Hasar</string>
    <string name="planned_end_date_empty_message">Tahmini transfer bitiş tarih ve saati seçilmelidir</string>
    <string name="planned_begin_date_empty_message">Tahmini transfer başlangıç tarih ve saati seçilmelidir</string>
    <string name="service_name_empty_error">Gönderilecek servis bilgisi girilmelidir</string>
    <string name="transfer_branch_empty_error">Transfer edilecek şube seçilmelidir</string>
    <string name="estimated_dropoff_date_time_title"><![CDATA[Transfer Bitiş Tarihi & Saati]]></string>
    <string name="service_name_hint_text">Transfer edilecek servis adı</string>
    <string name="password_hint_text">Şifre</string>
    <string name="username_hint_text">Kullanıcı Adı</string>
    <string name="text_login">GİRİŞ YAP</string>
</resources>