<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_dialog_transparent_background"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:id="@+id/close_button_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/main_dialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/spacing_default"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/spacing_default"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal"
                android:text="@string/logout_dialog"
                android:textColor="@color/main_title_color"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/spacing_default"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/main_dialog_button_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:text="@string/dialog_button_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/main_dialog_button_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:text="@string/logout_text"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>
