<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F47921"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_login_background" />

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shadow_bg_radious"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3">

            <ImageView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_logo"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/text_login"
                android:textColor="#28282D"
                android:textSize="28sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/username_hint_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/login_edit_text_bg"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/spacing_default"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/password_hint_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="32dp"
                android:background="@drawable/login_edit_text_bg"
                android:inputType="textPersonName|textPassword"
                android:paddingStart="@dimen/spacing_default"
                android:textSize="13sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="@dimen/spacing_huge"
                android:background="@drawable/button_ripple_effect"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_button_title"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />


        </LinearLayout>

        <ImageView
            android:id="@+id/img_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_car_left"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout"
            app:layout_constraintEnd_toStartOf="@+id/input_layout"
            app:layout_constraintTop_toTopOf="@+id/input_layout" />

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_car_right"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout"
            app:layout_constraintStart_toEndOf="@+id/input_layout"
            app:layout_constraintTop_toTopOf="@+id/input_layout" />

        <TextView
            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/main_title_color"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
